css/main.css
*{
	margin: 0;
	padding: 0;
}

div{
	white-space: nowrap; /*使窗口缩放后页面div不动*/
}

body{
	/*min-width: 1440px;*/
	/*background-color: #D7F4DF;*/
	FILTER: progid:DXImageTransform.Microsoft.Gradient(gradientType=0,startColorStr=#C5F9FE,endColorStr=#D7F4DF); /* IE */
	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#C5F9FE', endColorstr='#D7F4DF'); /* IE6 & IE7 */
	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#C5F9FE', endColorstr='#D7F4DF')"; /* IE8 */ 
	background:-moz-linear-gradient(top,#C5F9FE,#D7F4DF);/* Firefox */
	background:-webkit-linear-gradient(top,#C5F9FE,#D7F4DF);/* chrome */
	/*background-size: contain;*/
	background-repeat: repeat-x;
}



.head{
	width: 100%;
	height: 200px;
	margin: 10px auto 0px auto;
	background-color: #C5F9FE;
	/*border-bottom: #12CAD3 double 30px;*/
}

.head-content{
	width: 80%;
	height: 80px;
	margin: 0 auto;
}

.head-logo{
	width: 65px;
	height: 65px;
	margin: 25px auto 5px;
}
.head-logo:hover{
	-webkit-animation: head-logo-shake 0.1s linear infinite;
}
@-webkit-keyframes head-logo-shake{
	0%{-webkit-transform:rotate(0deg);}
	25%{-webkit-transform:rotate(-10deg);}
	50%{-webkit-transform:rotate(0deg);}
	75%{-webkit-transform:rotate(10deg);}
	100%{-webkit-transform:rotate(0deg);}
}

.head-title{
	width: 555px;
	height: 60px;
	margin: 25px auto 5px;
}

.head-right{
	float: right;
}

#head-time{
	background-color:rgba(114,192,234,0.7);
	color:#C5F9FE;
	padding: 5px 5px;
	border-radius: 25px;
	-moz-border-radius: 25px;
	-o-border-radius: 25px;
	-webkit-border-radius: 25px;
	font-family: "simHei";
	font-weight: bold;
	height: 24px;
	line-height: 24px;
	margin-top: 15px;
}

@-moz-document url-prefix(){#head-time{margin-top: -85px;}} /*Firefox hack*/

.head-CD1,.head-CD2{
	background-color:rgba(114,192,234,0.7);
	color:#C5F9FE;
	padding: 5px 5px;
	border-radius: 25px;
	-moz-border-radius: 25px;
	-o-border-radius: 25px;
	-webkit-border-radius: 25px;
	font-family: "simHei";
	font-weight: bold;
	margin-top:10px;
}

.head-CD1-inner,.head-CD2-inner{
	text-align: center;
}

#head-CD1-days,#head-CD2-days{
	color: #DB517F;
	font-size: 20px;
}

.head-card{
	/*width: 90%;*/
	font-family: "simHei";
	font-weight: bold;
	margin: 55px auto 0px;
}

.head-card-item{
	border: #12CAD3 solid 3px;
	border-radius: 50px;
	-moz-border-radius: 50px;
	-o-border-radius: 50px;
	-webkit-border-radius: 50px;
	color: #8AD1EF;
	background-color: #0E6B6F;
	margin-right: 0px;
	padding: 8px 8px;
	text-decoration: none;
	box-shadow: 0px 0px 8px rgba(34,25,25,0.2);
	-moz-box-shadow: 0px 0px 8px rgba(34,25,25,0.2);
	-o-box-shadow: 0px 0px 8px rgba(34,25,25,0.2);
	-webkit-box-shadow: 0px 0px 8px rgba(34,25,25,0.2);
}

.head-card a:active{
	border: #12CAD3 solid 3px;
	font-size: 20px;
	color: #DB517F;
	background-color: #FFFFFF;
	padding: 11px 11px;
}

.head-card .hovered{
	border: #12CAD3 solid 3px;
	font-size: 20px;
	color: #DB517F;
	background-color: #FFFFFF;
	padding: 12px 12px;
}

.head-card .clicked{
	border: #12CAD3 solid 3px;
	font-size: 20px;
	color: #DB517F;
	background-color: #FFFFFF;
	padding: 12px 12px;
}




.main-content{
	width: 60%;
	height: auto;
	margin: 10px auto;
	float: left;
}

.main-left{
	width: 20%;
	margin-top: 50px;
	float: left;
}

.dateLeft{
	width: 150px;
	height: 150px;
	margin-left: 25%;
	border-radius: 20px;
	-moz-border-radius: 20px;
	-o-border-radius: 20px;
	-webkit-border-radius: 20px;
	box-shadow: 0px 0px 8px rgba(234,25,25,0.2);
	-moz-box-shadow: 0px 0px 8px rgba(234,25,25,0.2);
	-o-box-shadow: 0px 0px 8px rgba(234,25,25,0.2);
	-webkit-box-shadow: 0px 0px 8px rgba(234,25,25,0.2);
	
	text-align: center;
	font-family: "Microsoft YaHei";
	background-color: #c3fafd;
}

.bigDate{
	font-size:75px;
	color: #f74480;
}

.smallMonth{
	font-size:25px;
	color: #47e9f3;
}

.bigDay{
	font-size:35px;
	color: #47e9f3;
	height: 139px;
	line-height: 139px;
}

.main-info{
	width: 98%;
	height: 200px;
	margin: 0 auto;
	margin-top: 8px;
	margin-bottom: 16px;
}

.main-info-head{
	width: 100%;
	height: 25%;
	background-color: #EFFFEC;
	border-radius: 20px;
	-moz-border-radius: 20px;
	-o-border-radius: 20px;
	-webkit-border-radius: 20px;
	box-shadow: 0px 0px 8px rgba(34,25,25,0.2);
	-moz-box-shadow: 0px 0px 8px rgba(34,25,25,0.2);
	-o-box-shadow: 0px 0px 8px rgba(34,25,25,0.2);
	-webkit-box-shadow: 0px 0px 8px rgba(34,25,25,0.2);

	/*background-image:-webkit-gradient(linear,0% 0%, 100% 0%, from(#2BF),color-stop(0.5,#2FF),to(#2FB));*/

}

.main-info-head a{
	font-family: "Microsoft YaHei";
	font-size: 25px;
	margin-left: -15px; /*初始状态，后续有动画*/
	line-height: 50px;
	opacity: 0; /*初始状态，后续有动画*/
	text-decoration: none;
	color :#000000;
}

.main-info-content{
	width: auto;
	height: 25%;
}

.main-info-type,.main-info-time,.main-info-site{
	width: 12%;
	height: 100%;
	display: inline-block;
	font-family: "Microsoft YaHei";
	font-size: 20px;
	font-weight: bold;
	line-height: 50px;
	text-align: center;
	border-top-left-radius: 20px;
	-moz-border-top-left-radius: 20px;
	-o-border-top-left-radius: 20px;
	-webkit-border-top-left-radius: 20px;
	border-bottom-left-radius: 20px;
	-moz-border-bottom-left-radius: 20px;
	-o-border-bottom-left-radius: 20px;
	-webkit-border-bottom-left-radius: 20px;
	box-shadow: 0px 0px 8px rgba(34,25,25,0.2) inset;
	-moz-box-shadow: 0px 0px 8px rgba(34,25,25,0.2) inset;
	-o-box-shadow: 0px 0px 8px rgba(34,25,25,0.2) inset;
	-webkit-box-shadow: 0px 0px 8px rgba(34,25,25,0.2) inset;
}

.main-info-type{
	background-color: #FFAD8E;
	color: #B54A4A;
}

.main-info-time{
	background-color: #95FF8E;
	color: #3DB940;
}

.main-info-site{
	background-color: #8EFAFF;
	color: #00B7B7;
}

.main-info-inner{
	width: 84%;
	height: 100%;
	display: inline-block;
	font-family: "Microsoft YaHei";
	font-size: 20px;
	line-height: 50px;
	padding-left: 30px;
	border-top-right-radius: 20px;
	-moz-border-top-right-radius: 20px;
	-o-border-top-right-radius: 20px;
	-webkit-border-top-right-radius: 20px;
	border-bottom-right-radius: 20px;
	-moz-border-bottom-right-radius: 20px;
	-o-border-bottom-right-radius: 20px;
	-webkit-border-bottom-right-radius: 20px;
	box-shadow: 0px 0px 8px rgba(34,25,25,0.2) inset;
	-moz-box-shadow: 0px 0px 8px rgba(34,25,25,0.2) inset;
	-o-box-shadow: 0px 0px 8px rgba(34,25,25,0.2) inset;
	-webkit-box-shadow: 0px 0px 8px rgba(34,25,25,0.2) inset;
}

.main-info-empty,.main-info-loading{
	width: 98%;
	height: 450px;
	margin: 0 auto;
	margin-top: 8px;
	margin-bottom: 16px;
	text-align: center;
	border-radius: 20px;
	box-shadow: 0px 0px 8px rgba(34,25,25,0.2);
	font-size: 25px;
	font-family: "Microsoft YaHei";
	color: #EC5B5B;
}

.main-info-empty-inner{
	width:60%;
	height: 100%;
	margin-left:20%;
	opacity: 0; /*初始状态，后续有动画*/
}

.main-info-loading-inner{
	width:60%;
	height: 100%;
	margin-left:20%;
	padding-top: 15%;
}

.loading-logo{
	-webkit-animation: head-logo-shake 0.1s linear infinite;
}


/* 小屏样式 */
@media screen and (max-width: 1100px){
	body{
		min-height: 1000px;
	}

	.head-logo{
		width: 65px;
		height: 65px;
		margin: 25px 6px 5px 78px;
	}

	.head-right{
		margin: 5px 275px 5px 5px;
	}

	.head-card{
		width: 80%;
		font-family: "simHei";
		font-weight: bold;
		margin: 175px 6px 0px -70px;
	}

	.main{
		margin-top: 130px;
	}

	.loading-logo{
		margin-right: 80px;
	}

	@-moz-document url-prefix(){
		.head-right{
			margin: 100px 275px 5px 5px;
		}
	} /*Firefox hack*/
}





.foot{
	width: 100%;
	height: 150px;
	margin: 0 auto;
	border-top: #C5F9FE dashed 10px;
	clear: both;
}

.picToDisplay{
	text-align: center;
}

.foot-contact{
	display: inline-block;
	float: left;
	margin-left: 20px;
}

.foot-public{
	display: inline-block;
	float: right;
	margin-right: 20px;
}

.foot-banner{
	width: 600px;
	height: 55px;
	margin: 35px auto 0px auto;
	display: inline-block;
	text-align: center;
}

.foot-times{
	width: 60px;
	height: 20px;
	background-color: #000000;
	color: #00FF00;
	border: #FFF solid 2px;
	border-style: inset;
	text-align: center;
	margin: 20px auto 10px auto;
}

@-moz-document url-prefix(){
	.foot-times{
		font-family: "SimSun";
		margin: 16px auto 12px auto;
	}
} /*Firefox hack*/

